[package]
name = "tyo-mq-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for tyo-mq: pub/sub messaging with durable ACK/retry delivery, topic wildcards, consumer groups, and auth realms"
license = "Apache-2.0"
repository = "https://github.com/tyolab/tyo-mq-client-rust"
keywords = ["tyo-mq", "pubsub", "message-queue", "socketio", "messaging"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "tyo_mq_client"

[dependencies]
rust_socketio = "0.6"
serde_json = "1"
